refactor: simplify SpaceService methods and update SpaceServiceImpl implementation